--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img class="bola" src="./img/Basquete-Bola-de-Basqute-PNG.png" alt="">
 
 </div>
-    <div class="botao">
+    <div>
         <button>Botão</button>
     </div>
     
